# bevy_tutorial

./: Cargo.toml  README.md
board_plugin/: Cargo.toml
board_plugin/src/: bounds.rs  events.rs  lib.rs
board_plugin/src/components/: bomb.rs  bomb_neighbor.rs  coordinates.rs  mod.rs  uncover.rs
board_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: input.rs  mark.rs  mod.rs
src/: main.rs
title_plugin/: Cargo.toml
title_plugin/src/: event.rs  lib.rs
title_plugin/src/components/: custom.rs  easy.rs  hard.rs  mod.rs  normal.rs
title_plugin/src/resources/: difficulty.rs  mod.rs  option.rs
title_plugin/src/systems/: mod.rs  select_difficulty.rs
