[package]
name = "bevy_tutorial"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
board_plugin = { path = "board_plugin" }
serde = "1.0.208"
rand = "0.9.0-alpha.2"
colored = { version = "2.1.0", optional = true }
bevy-inspector-egui = { version = "0.25.2", optional = true }
log = "0.4.22"

[dependencies.bevy]
version = "0.14.1"
default-features = false
features = [
    "bevy_render",
    "bevy_winit",
    "png",
    "webgl2"
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.14.1"
default-features = false
features = [
    "x11"
]

[workspace]
members = [
    "board_plugin"
]