[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]

[dependencies]

# Serialization
serde = "1.0"

# Random
rand = "0.8"
log = "0.4.22"

# Console Debug
[dependencies.colored]
version = "2.0"
optional = true

# Hierarchy inspector debug
[dependencies.bevy-inspector-egui]
version = "0.25.2"
optional = true

# Engine
[dependencies.bevy]
version = "0.14.1"
default-features = false
