[package]
name = "title_plugin"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = [
    "colored",
    "bevy-inspector-egui",
]

[dependencies]
log = "0.4.22"

[dependencies.board_plugin]
path = "../board_plugin"

[dependencies.colored]
version = "2.1.0"
optional = true

[dependencies.bevy-inspector-egui]
version = "0.25.2"
optional = true

[dependencies.bevy]
version = "0.14.1"
default-features = false
features = [
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_state",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.15"
features = ["js-sys"]
